--- a/HuggingFace/main.ipynb
+++ b/HuggingFace/main.ipynb
@@ -19,17 +19,12 @@
    "source": [
     "chatbot = pipeline(\"text2text-generation\", model=\"facebook/blenderbot-400M-distill\")\n",
     "\n",
-    "messages = {\"role\": \"user\", \"content\": \"What is sport do you recommend in the winter?\"}\n",
-    "res = chatbot(messages)\n",
-    "res\n",
+    "message = \"What is sport do you recommend in the winter?\"\n",
+    "print(chatbot(message))\n",
     "\n",
-    "# res.add_messages({\n",
-    "#     \"role\": \"user\", \"content\": \"What else do you recommend?\"\n",
-    "# })\n",
-    "# print(res)\n",
     "\n",
-    "# del translation_bot\n",
-    "# gc.collect()"
+    "del chatbot\n",
+    "gc.collect()"
    ]
   },
   {
@@ -70,6 +65,52 @@
     "\n",
     "del summarizer\n",
     "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.1392,  0.0030,  0.0470,  ...,  0.0641, -0.0163,  0.0636],\n",
+      "        [ 0.0227, -0.0014, -0.0056,  ..., -0.0225,  0.0846, -0.0283],\n",
+      "        [-0.1043, -0.0628,  0.0093,  ...,  0.0020,  0.0653, -0.0150]])\n",
+      "tensor([[ 0.1392,  0.0030,  0.0470,  ...,  0.0641, -0.0163,  0.0636],\n",
+      "        [ 0.0227, -0.0014, -0.0056,  ..., -0.0225,  0.0846, -0.0283],\n",
+      "        [-0.1043, -0.0628,  0.0093,  ...,  0.0020,  0.0653, -0.0150]])\n",
+      "tensor([[ 1.0000,  0.0363, -0.0907],\n",
+      "        [ 0.0363,  1.0000, -0.0369],\n",
+      "        [-0.0907, -0.0369,  1.0000]])\n",
+      "The cat sits outside\t\tThe dog plays in the garden\t\tScore: 1.0000001192092896\n",
+      "A man is playing guitar\t\tA woman watches TV\t\tScore: 1.0\n",
+      "The movies are awesome\t\tThe new movie is so great\t\tScore: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# embedding\n",
+    "\n",
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "\n",
+    "model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
+    "\n",
+    "sentences1 = ['The cat sits outside', 'A man is playing guitar', 'The movies are awesome']\n",
+    "embeddings1 = model.encode(sentences1, convert_to_tensor=True)\n",
+    "print(embeddings1)\n",
+    "\n",
+    "sentences2 = ['The dog plays in the garden', 'A woman watches TV', 'The new movie is so great']\n",
+    "embeddings2 = model.encode(sentences1, convert_to_tensor=True)\n",
+    "print(embeddings2)\n",
+    "\n",
+    "cosine_score = util.cos_sim(embeddings1, embeddings2)  # 余弦距离\n",
+    "print(cosine_score)\n",
+    "\n",
+    "for i in range(len(cosine_score)):\n",
+    "    print(f'{sentences1[i]}\\t\\t{sentences2[i]}\\t\\tScore: {cosine_score[i][i]}')"
    ]
   }
  ],
